--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,50 @@
+aiohttp==3.6.2
+async-timeout==3.0.1
+attrs==19.3.0
 certifi==2019.11.28
 chardet==3.0.4
+click==7.1.1
+colorama==0.4.3
+covidify==1.0.0
+cycler==0.10.0
+dash==1.9.1
+dash-bootstrap-components==0.9.1
+dash-core-components==1.8.1
+dash-daq==0.4.0
+dash-html-components==1.0.2
+dash-renderer==1.2.4
+dash-table==4.6.1
+docopt==0.6.2
+dtale==1.8.1
+Flask==1.1.1
+Flask-Compress==1.4.0
+flask-ngrok==0.0.25
+future==0.18.2
+gitdb==4.0.2
+GitPython==3.1.0
 idna==2.9
+itsdangerous==1.1.0
+Jinja2==2.11.1
+kiwisolver==1.1.0
+lz4==3.0.2
+MarkupSafe==1.1.1
+matplotlib==3.2.1
+multidict==4.7.5
 numpy==1.18.2
 pandas==1.0.3
+Pillow==7.0.0
 plotly==4.5.4
+pyarrow==0.16.0
+pyparsing==2.4.6
 python-dateutil==2.8.1
 pytz==2019.3
 requests==2.23.0
 retrying==1.3.3
+scipy==1.4.1
 six==1.14.0
+smmap==3.0.1
+tqdm==4.43.0
 urllib3==1.25.8
+Werkzeug==1.0.0
+XlsxWriter==1.2.8
+yarl==1.4.2
