--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ flask-ngrok==0.0.25
 future==0.18.2
 gitdb==4.0.2
 GitPython==3.1.0
+gunicorn==20.0.4
 idna==2.9
 itsdangerous==1.1.0
 Jinja2==2.11.1
