--- a/requirements.txt
+++ b/requirements.txt
@@ -15,8 +15,8 @@ dash-html-components==1.0.2
 dash-renderer==1.2.4
 dash-table==4.6.1
 docopt==0.6.2
-dtale==1.8.1
 Flask==1.1.1
+Flask-Caching==1.8.0
 Flask-Compress==1.4.0
 flask-ngrok==0.0.25
 future==0.18.2
@@ -39,6 +39,7 @@ pyarrow==0.16.0
 pyparsing==2.4.6
 python-dateutil==2.8.1
 pytz==2019.3
+redis==3.4.1
 requests==2.23.0
 retrying==1.3.3
 scipy==1.4.1
