--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,16 @@
 aiohttp==3.6.2
+amqp==2.5.2
+appnope==0.1.0
+argon2-cffi==20.1.0
 async-timeout==3.0.1
 attrs==19.3.0
+backcall==0.2.0
+beautifulsoup4==4.9.0
+billiard==3.6.3.0
+bleach==3.1.5
+celery==4.4.2
 certifi==2019.11.28
+cffi==1.14.2
 chardet==3.0.4
 click==7.1.1
 colorama==0.4.3
@@ -14,39 +23,94 @@ dash-daq==0.4.0
 dash-html-components==1.0.2
 dash-renderer==1.2.4
 dash-table==4.6.1
+decorator==4.4.2
+defusedxml==0.6.0
 docopt==0.6.2
+docutils==0.16
+entrypoints==0.3
 Flask==1.1.1
 Flask-Caching==1.8.0
 Flask-Compress==1.4.0
 flask-ngrok==0.0.25
 future==0.18.2
+geocoder==1.38.1
+geoip2==3.0.0
 gitdb==4.0.2
 GitPython==3.1.0
 gunicorn==20.0.4
 idna==2.9
+importlib-metadata==1.6.0
+ipykernel==5.3.4
+ipython==7.17.0
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
 itsdangerous==1.1.0
+jedi==0.17.2
 Jinja2==2.11.1
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==6.1.7
+jupyter-console==6.1.0
+jupyter-core==4.6.3
+Kivy==1.11.1
+Kivy-Garden==0.1.4
 kiwisolver==1.1.0
+kombu==4.6.8
 lz4==3.0.2
 MarkupSafe==1.1.1
 matplotlib==3.2.1
+maxminddb==1.5.4
+mistune==0.8.4
 multidict==4.7.5
+nbconvert==5.6.1
+nbformat==5.0.7
+notebook==6.1.3
 numpy==1.18.2
+packaging==20.4
 pandas==1.0.3
+pandocfilters==1.4.2
+parso==0.7.1
+pexpect==4.8.0
+pgeocode==0.2.1
+pickleshare==0.7.5
 Pillow==7.0.0
 plotly==4.5.4
+prometheus-client==0.8.0
+prompt-toolkit==3.0.6
+ptyprocess==0.6.0
 pyarrow==0.16.0
+pycparser==2.20
+pygeoip==0.3.2
+Pygments==2.6.1
 pyparsing==2.4.6
+pyrsistent==0.16.0
 python-dateutil==2.8.1
+python-redis-cache==1.1.0
 pytz==2019.3
+pyzmq==19.0.2
+qtconsole==4.7.6
+QtPy==1.9.0
+ratelim==0.1.6
 redis==3.4.1
 requests==2.23.0
 retrying==1.3.3
+rq==1.3.0
 scipy==1.4.1
+Send2Trash==1.5.0
 six==1.14.0
 smmap==3.0.1
+soupsieve==2.0
+terminado==0.8.3
+testpath==0.4.4
+tornado==6.0.4
 tqdm==4.43.0
+traitlets==4.3.3
 urllib3==1.25.8
+vine==1.3.0
+wcwidth==0.2.5
+webencodings==0.5.1
 Werkzeug==1.0.0
+widgetsnbextension==3.5.1
 XlsxWriter==1.2.8
 yarl==1.4.2
+zipp==3.1.0
